Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13165

MSG_RESENT can be improperly cleared.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

       00000100:00100000:1.0:1570354760.316942:0:15254:0:(service.c:2227:ptlrpc_server_handle_request()) Handling RPC req@ffffa000847a8480 pname:cluuid+ref:pid:xid:nid:opc:job mdt00_016:97b96e90-70b4-bda3-25ba-28398e8331a8+812:8135:x1646635773728208:12345-192.168.2.18@tcp:101:ls.0
       00010000:00010000:1.0:1570354760.316957:0:15254:0:(ldlm_lockd.c:1254:ldlm_handle_enqueue0()) ### server-side enqueue handler, new lock created ns: mdt-lustre-MDT0000_UUID lock: ffffa00083f52fc0/0x754876265176560e lrc: 2/0,0 mode: --/CR res: [0x2c0000409:0x5fb:0x0].0x0 bits 0x0/0x0 rrc: 2 type: IBT flags: 0x40000000000000 nid: local remote: 0x14473db66db4219a expref: -99 pid: 15254 timeout: 0 lvb_type: 0
       00010000:00010000:1.0:1570354760.339199:0:15254:0:(ldlm_lockd.c:1399:ldlm_handle_enqueue0()) ### server-side enqueue handler, sending reply(err=301, rc=0) ns: mdt-lustre-MDT0000_UUID lock: ffffa00083f52fc0/0x754876265176560e lrc: 1/0,0 mode: --/CR res: [0x2c0000409:0x5fb:0x0].0x0 bits 0x1/0x0 rrc: 5 type: IBT flags: 0x44000000000000 nid: 192.168.2.18@tcp remote: 0x14473db66db4219a expref: 809 pid: 15254 timeout: 0 lvb_type: 0
       00010000:00010000:1.0:1570354760.339207:0:15254:0:(ldlm_lock.c:210:ldlm_lock_put()) ### final lock_put on destroyed lock, freeing it. ns: mdt-lustre-MDT0000_UUID lock: ffffa00083f52fc0/0x754876265176560e lrc: 0/0,0 mode: --/CR res: [0x2c0000409:0x5fb:0x0].0x0 bits 0x1/0x0 rrc: 5 type: IBT flags: 0x44000000000000 nid: 192.168.2.18@tcp remote: 0x14473db66db4219a expref: 809 pid: 15254 timeout: 0 lvb_type: 0
       00000100:00100000:1.0:1570354760.339237:0:15254:0:(service.c:2277:ptlrpc_server_handle_request()) Handled RPC req@ffffa000847a8480 pname:cluuid+ref:pid:xid:nid:opc:job mdt00_016:97b96e90-70b4-bda3-25ba-28398e8331a8+808:8135:x1646635773728208:12345-192.168.2.18@tcp:101:ls.0 Request processed in 22294us (22530us total) trans 4295253673 rc 301/301
       00000100:00100000:0.0:1570354760.342162:0:15299:0:(service.c:2227:ptlrpc_server_handle_request()) Handling RPC req@ffffa00137b01050 pname:cluuid+ref:pid:xid:nid:opc:job mdt_rdpg00_010:97b96e90-70b4-bda3-25ba-28398e8331a8+812:8135:x1646635773730160:12345-192.168.2.18@tcp:35:ls.0
       00000100:00100000:1.0:1570354760.342178:0:15270:0:(service.c:2227:ptlrpc_server_handle_request()) Handling RPC req@ffffa00124bd2d00 pname:cluuid+ref:pid:xid:nid:opc:job mdt00_028:97b96e90-70b4-bda3-25ba-28398e8331a8+812:8135:x1646635773728208:12345-192.168.2.18@tcp:101:ls.0
       00010000:00010000:1.0:1570354760.342187:0:15270:0:(ldlm_lockd.c:1186:ldlm_handle_enqueue0()) ### server-side enqueue handler START
       00010000:00010000:1.0:1570354760.342196:0:15270:0:(ldlm_lockd.c:1254:ldlm_handle_enqueue0()) ### server-side enqueue handler, new lock created ns: mdt-lustre-MDT0000_UUID lock: ffffa00084353440/0x7548762651765749 lrc: 2/0,0 mode: --/CR res: [0x2c0000409:0x5fb:0x0].0x0 bits 0x0/0x0 rrc: 2 type: IBT flags: 0x40000000000000 nid: local remote: 0x14473db66db4219a expref: -99 pid: 15270 timeout: 0 lvb_type: 0
       00000100:00100000:0.0:1570354760.342208:0:15299:0:(service.c:2277:ptlrpc_server_handle_request()) Handled RPC req@ffffa00137b01050 pname:cluuid+ref:pid:xid:nid:opc:job mdt_rdpg00_010:97b96e90-70b4-bda3-25ba-28398e8331a8+814:8135:x1646635773730160:12345-192.168.2.18@tcp:35:ls.0 Request processed in 45us (515us total) trans 4295253686 rc 0/0
       00000001:00020000:1.0:1570354760.342210:0:15270:0:(tgt_lastrcvd.c:2144:tgt_check_lookup_req()) lustre-MDT0000: busy tag 6 req xid 1646635773728208 (null): xid 1646635773730160, transno 4295253686, client gen 7, slot idx 76
       00000004:00010000:1.0:1570354760.353769:0:15270:0:(mdt_handler.c:3657:mdt_intent_fixup_resent()) @@@ no existing lock with rhandle 0x14473db66db4219a req@ffffa00124bd2d00 x1646635773728208/t0(0) o101->97b96e90-70b4-bda3-25ba-28398e8331a8@192.168.2.18@tcp:150/0 lens 1040/0 e 0 to 0 dl 1570354850 ref 1 fl Interpret:/0/ffffffff rc 0/-1 job:'ls.0'
       00000001:00040000:1.0:1570354760.375427:0:15270:0:(tgt_lastrcvd.c:1162:tgt_clean_by_tag()) ASSERTION( (!(tgt_is_increasing_xid_client(exp)) || (trd->trd_reply.lrd_xid <= xid)) ) failed:
      

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: